k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-function-app-svc
  labels:
    app: hello-function-app
spec:
  type: ClusterIP
  selector:
    app: hello-function-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
