k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-function-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: foobar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-function-app-svc
                port:
                  number: 80
